<resources>
    <string name="app_name">my garbage</string>
    <string name="Correo">Correo</string>
    <string name="Contraseña">Contraseña</string>
    <string name="BTNingresar">Ingresar</string>
    <string name="Calendario">Calendario</string>
    <string name="Basura">Basura</string>
    <string name="AgregarDispositivo">Agregar Dispositivo</string>
    <string name="Opciones">Opciones</string>
    <string name="Perfil">Perfil</string>
    <string name="Notificacion">Notificación</string>
    <string name="cerrar">Cerrar Sesión</string>
    <string name="Historial">Historial</string>
    <string name="contra">Modificar contraseña</string>
    <string name="recuerdame">Recuerdame</string>
    <string name="cuenta">Crear cuenta</string>
    <string name="olvidar">Olvide mi contraseña</string>
    <string name="genero">genero</string>
    <string name="ciudad">Ciudad</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>